clusters/homelab/infra/kube-resource-report/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-resource-report
  namespace: kube-resource-report
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: report.int.rosair.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-resource-report
                port:
                  number: 80
